// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LeftMenu component Render Left Menu with default value from store 1`] = `<!---->`;

exports[`LeftMenu component Render Left Menu with value from store 1`] = `<!---->`;

exports[`LeftMenu component Render Left Menu with value from store 2`] = `
<a data-server-rendered="true" class="nav-item"><a class="button"><span class="icon"><i class="fa fa-user"></i></span> <span> Login </span></a>
<!---->
</a>
`;

exports[`Menu component Render Menu with value from store open 1`] = `<!---->`;

exports[`Menu component Render Menu with value from store open 2`] = `
<a data-server-rendered="true" class="nav-item"><a class="button"><span class="icon"><i class="fa fa-user"></i></span> <span> Login </span></a>
<div class="modal is-active">
    <div class="modal-background"></div>
    <div class="animation-content modal-content" style="max-width:960px;">
        <div class="card">
            <header class="card-header">
                <div class="field has-addons-centered">
                    <!---->
                    <div class="control has-icons-left is-clearfix"><input type="search" placeholder="Search ..." autocomplete="on" value="" class="input"> <span class="icon is-left"><i class="fa fa-search"></i></span>
                        <!---->
                        <!---->
                    </div>
                    <!---->
                </div>
            </header>
            <div class="card-content">
                <div>
                    <legend><span class="icon"><i class="fa fa-user"></i></span> Login
                    </legend>
                    <div class="columns is-multiline is-mobile">
                        <div class="column is-12-mobile is-half-tablet is-half-desktop">
                            <article class="box media">
                                <div class="media-left">
                                    <figure class="image is-32x32"><span class="icon"><i class="fa fa-user"></i></span></figure>
                                </div>
                                <div class="media-content">
                                    <div class="content"><strong>Login</strong> <br> <span>Log in to use the application</span></div>
                                </div>
                            </article>
                        </div>
                        <div class="column is-12-mobile is-half-tablet is-half-desktop">
                            <article class="box media">
                                <div class="media-left">
                                    <figure class="image is-32x32"><span class="icon"><i class="fa fa-user"></i></span></figure>
                                </div>
                                <div class="media-content">
                                    <div class="content"><strong>test</strong> <br> <span></span></div>
                                </div>
                            </article>
                        </div>
                    </div>
                </div>
            </div>
        </div>
        <footer class="card-footer">
            <p class="card-footer-item"><a>Close</a></p>
        </footer>
    </div> <button class="modal-close is-large"></button></div>
</a>
`;

exports[`Menu component Render Menu with value from store open and filtering 1`] = `<!---->`;

exports[`Menu component Render Menu with value from store open and filtering 2`] = `
<a data-server-rendered="true" class="nav-item"><a class="button"><span class="icon"><i class="fa fa-user"></i></span> <span> Login </span></a>
<div class="modal is-active">
    <div class="modal-background"></div>
    <div class="animation-content modal-content" style="max-width:960px;">
        <div class="card">
            <header class="card-header">
                <div class="field has-addons-centered">
                    <!---->
                    <div class="control has-icons-left is-clearfix"><input type="search" placeholder="Search ..." autocomplete="on" value="test" class="input"> <span class="icon is-left"><i class="fa fa-search"></i></span>
                        <!---->
                        <!---->
                    </div>
                    <!---->
                </div>
            </header>
            <div class="card-content">
                <div>
                    <legend><span class="icon"><i class="fa fa-user"></i></span> Login
                    </legend>
                    <div class="columns is-multiline is-mobile">
                        <div class="column is-12-mobile is-half-tablet is-half-desktop">
                            <article class="box media">
                                <div class="media-left">
                                    <figure class="image is-32x32"><span class="icon"><i class="fa fa-user"></i></span></figure>
                                </div>
                                <div class="media-content">
                                    <div class="content"><strong>test</strong> <br> <span></span></div>
                                </div>
                            </article>
                        </div>
                    </div>
                </div>
            </div>
        </div>
        <footer class="card-footer">
            <p class="card-footer-item"><a>Close</a></p>
        </footer>
    </div> <button class="modal-close is-large"></button></div>
</a>
`;

exports[`Menu component Render Menu with value from store open and select custom view 1`] = `<!---->`;

exports[`Menu component Render Menu with value from store open and select custom view 2`] = `
<a data-server-rendered="true" class="nav-item"><a class="button"><span class="icon"><i class="fa fa-user"></i></span> <span> Login </span></a>
<div class="modal is-active">
    <div class="modal-background"></div>
    <div class="animation-content modal-content" style="max-width:960px;">
        <div class="card">
            <header class="card-header">
                <div class="field has-addons-centered">
                    <!---->
                    <div class="control has-icons-left is-clearfix"><input type="search" placeholder="Search ..." autocomplete="on" value="" class="input"> <span class="icon is-left"><i class="fa fa-search"></i></span>
                        <!---->
                        <!---->
                    </div>
                    <!---->
                </div>
            </header>
            <div class="card-content">
                <div>
                    <legend><span class="icon"><i class="fa fa-user"></i></span> Login
                    </legend>
                    <div class="columns is-multiline is-mobile">
                        <div class="column is-12-mobile is-half-tablet is-half-desktop">
                            <article class="box media">
                                <div class="media-left">
                                    <figure class="image is-32x32"><span class="icon"><i class="fa fa-user"></i></span></figure>
                                </div>
                                <div class="media-content">
                                    <div class="content"><strong>Login</strong> <br> <span>Log in to use the application</span></div>
                                </div>
                            </article>
                        </div>
                        <div class="column is-12-mobile is-half-tablet is-half-desktop">
                            <article class="box media">
                                <div class="media-left">
                                    <figure class="image is-32x32"><span class="icon"><i class="fa fa-user"></i></span></figure>
                                </div>
                                <div class="media-content">
                                    <div class="content"><strong>test</strong> <br> <span></span></div>
                                </div>
                            </article>
                        </div>
                    </div>
                </div>
            </div>
        </div>
        <footer class="card-footer">
            <p class="card-footer-item"><a>Close</a></p>
        </footer>
    </div> <button class="modal-close is-large"></button></div>
</a>
`;

exports[`Menu component Render Menu with value from store open and select custom view 3`] = `
<a data-server-rendered="true" class="nav-item"><a class="button"><span class="icon"><i class="fa fa-user"></i></span> <span> Login </span></a>
<div class="modal is-active">
    <div class="modal-background"></div>
    <div class="animation-content modal-content" style="max-width:960px;">
        <div class="card">
            <header class="card-header">
                <div class="field has-addons-centered">
                    <!---->
                    <div class="control has-icons-left is-clearfix"><input type="search" placeholder="Search ..." autocomplete="on" value="" class="input"> <span class="icon is-left"><i class="fa fa-search"></i></span>
                        <!---->
                        <!---->
                    </div>
                    <!---->
                </div>
            </header>
            <div class="card-content">
                <div>
                    <legend><span class="icon"><i class="fa fa-user"></i></span> Login
                    </legend>
                    <div class="columns is-multiline is-mobile">
                        <div class="column is-12-mobile is-half-tablet is-half-desktop">
                            <article class="box media">
                                <div class="media-left">
                                    <figure class="image is-32x32"><span class="icon"><i class="fa fa-user"></i></span></figure>
                                </div>
                                <div class="media-content">
                                    <div class="content"><strong>Login</strong> <br> <span>Log in to use the application</span></div>
                                </div>
                            </article>
                        </div>
                        <div class="column is-12-mobile is-half-tablet is-half-desktop">
                            <article class="box media">
                                <div class="media-left">
                                    <figure class="image is-32x32"><span class="icon"><i class="fa fa-user"></i></span></figure>
                                </div>
                                <div class="media-content">
                                    <div class="content"><strong>test</strong> <br> <span></span></div>
                                </div>
                            </article>
                        </div>
                    </div>
                </div>
            </div>
        </div>
        <footer class="card-footer">
            <p class="card-footer-item"><a>Close</a></p>
        </footer>
    </div> <button class="modal-close is-large"></button></div>
</a>
`;

exports[`Menu component Render Menu with value from store open and select space 1`] = `<!---->`;

exports[`Menu component Render Menu with value from store open and select space 2`] = `
<a data-server-rendered="true" class="nav-item"><a class="button"><span class="icon"><i class="fa fa-user"></i></span> <span> Login </span></a>
<div class="modal is-active">
    <div class="modal-background"></div>
    <div class="animation-content modal-content" style="max-width:960px;">
        <div class="card">
            <header class="card-header">
                <div class="field has-addons-centered">
                    <!---->
                    <div class="control has-icons-left is-clearfix"><input type="search" placeholder="Search ..." autocomplete="on" value="" class="input"> <span class="icon is-left"><i class="fa fa-search"></i></span>
                        <!---->
                        <!---->
                    </div>
                    <!---->
                </div>
            </header>
            <div class="card-content">
                <div>
                    <legend><span class="icon"><i class="fa fa-user"></i></span> Login
                    </legend>
                    <div class="columns is-multiline is-mobile">
                        <div class="column is-12-mobile is-half-tablet is-half-desktop">
                            <article class="box media">
                                <div class="media-left">
                                    <figure class="image is-32x32"><span class="icon"><i class="fa fa-user"></i></span></figure>
                                </div>
                                <div class="media-content">
                                    <div class="content"><strong>Login</strong> <br> <span>Log in to use the application</span></div>
                                </div>
                            </article>
                        </div>
                        <div class="column is-12-mobile is-half-tablet is-half-desktop">
                            <article class="box media">
                                <div class="media-left">
                                    <figure class="image is-32x32"><span class="icon"><i class="fa fa-user"></i></span></figure>
                                </div>
                                <div class="media-content">
                                    <div class="content"><strong>test</strong> <br> <span></span></div>
                                </div>
                            </article>
                        </div>
                    </div>
                </div>
            </div>
        </div>
        <footer class="card-footer">
            <p class="card-footer-item"><a>Close</a></p>
        </footer>
    </div> <button class="modal-close is-large"></button></div>
</a>
`;

exports[`Menu component Render Menu with value from store open and select space 3`] = `
<a data-server-rendered="true" class="nav-item"><a class="button"><span class="icon"><i class="fa fa-trash"></i></span> <span> New Space </span></a>
<div class="modal is-active">
    <div class="modal-background"></div>
    <div class="animation-content modal-content" style="max-width:960px;">
        <div class="card">
            <header class="card-header">
                <div class="field has-addons-centered">
                    <!---->
                    <div class="control has-icons-left is-clearfix"><input type="search" placeholder="Search ..." autocomplete="on" value="" class="input"> <span class="icon is-left"><i class="fa fa-search"></i></span>
                        <!---->
                        <!---->
                    </div>
                    <!---->
                </div>
            </header>
            <div class="card-content">
                <div>
                    <legend><span class="icon"><i class="fa fa-user"></i></span> Login
                    </legend>
                    <div class="columns is-multiline is-mobile">
                        <div class="column is-12-mobile is-half-tablet is-half-desktop">
                            <article class="box media">
                                <div class="media-left">
                                    <figure class="image is-32x32"><span class="icon"><i class="fa fa-user"></i></span></figure>
                                </div>
                                <div class="media-content">
                                    <div class="content"><strong>Login</strong> <br> <span>Log in to use the application</span></div>
                                </div>
                            </article>
                        </div>
                        <div class="column is-12-mobile is-half-tablet is-half-desktop">
                            <article class="box media">
                                <div class="media-left">
                                    <figure class="image is-32x32"><span class="icon"><i class="fa fa-user"></i></span></figure>
                                </div>
                                <div class="media-content">
                                    <div class="content"><strong>test</strong> <br> <span></span></div>
                                </div>
                            </article>
                        </div>
                    </div>
                </div>
            </div>
        </div>
        <footer class="card-footer">
            <p class="card-footer-item"><a>Close</a></p>
        </footer>
    </div> <button class="modal-close is-large"></button></div>
</a>
`;

exports[`RightMenu component Render Right Menu with default value from store 1`] = `<!---->`;

exports[`RightMenu component Render Right Menu with value from store 1`] = `<!---->`;

exports[`RightMenu component Render Right Menu with value from store 2`] = `
<a data-server-rendered="true" class="nav-item"><a class="button"><span class="icon"><i class="fa fa-user"></i></span> <span> Login </span></a>
<!---->
</a>
`;
